--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <p>
         Day to day, that means writing efficient queries, optimizing datasets, and communicating findings with crisp visuals
         tailored to business questions. I’m comfortable owning the full path from raw data to decision: from BigQuery and Python
-        transformations to KPI design and delivery in tools like Power BI, Tableau or Looker Studio. :contentReference[oaicite:1]{index=1}
+        transformations to KPI design and delivery in tools like Power BI, Tableau or Looker Studio.
       </p>
       <div class="skills" aria-label="Core skills">
         <span class="chip">Python</span>
@@ -133,7 +133,7 @@
         <span class="chip">Tableau</span>
         <span class="chip">Looker Studio</span>
         <span class="chip">Excel</span>
-        <span class="chip">Git & GitHub</span> :contentReference[oaicite:2]{index=2}
+        <span class="chip">Git & GitHub</span>
       </div>
     </aside>
   </section>
