--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
     .hero-whatido .skills{
       margin-top:1rem;display:flex;flex-wrap:wrap;gap:.5rem
     }
+    .hero-photo {
+    margin: 1.5rem 0;
+    }
+    .hero-photo img {
+      width: 100%;
+      border-radius: 16px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+      object-fit: cover;
+    }
     .chip{
       padding:.4rem .65rem;border-radius:999px;background:#F3F4F6;border:1px solid #E5E7EB;font-size:.9rem;color:#374151
     }
@@ -106,6 +115,9 @@
     <div class="hero-title">
       <h1>Lautaro Pereira Basile</h1>
       <p class="role">Economist & Data Analyst</p>
+      <div class="hero-photo">
+        <img src="images/Selfie.jpg" alt="LPB portrait">
+      </div>
       <div class="cta">
         <a class="btn-primary" href="#projects">View my work</a>
         <a class="btn-outline" href="#contact">Get in touch</a>
