--- a/index.html
+++ b/index.html
@@ -6,94 +6,130 @@
   <title>Lautaro Pereira Basile - Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
-    :root{
-      --bg:#F9FAFB;
-      --fg:#111827;
-      --card:#FFFFFF;
-      --primary:#2563EB;
-      --primary-600:#1e4fcc;
-      --shadow:0 4px 16px rgba(0,0,0,.08);
-      --radius:16px;
-    }
-    *{box-sizing:border-box}
-    body{margin:0;font-family:'Inter',sans-serif;background:var(--bg);color:var(--fg)}
-    a{text-decoration:none;color:inherit}
+  :root{
+    --bg:#F9FAFB;
+    --fg:#111827;
+    --card:#FFFFFF;
+    --primary:#2563EB;
+    --primary-600:#1e4fcc;
+    --shadow:0 4px 16px rgba(0,0,0,.08);
+    --radius:16px;
+  }
+  *{box-sizing:border-box}
+  body{margin:0;font-family:'Inter',sans-serif;background:var(--bg);color:var(--fg)}
+  a{text-decoration:none;color:inherit}
 
-    /* Navbar */
-    header{
-      position:sticky;top:0;background:#fff;
-      display:flex;justify-content:space-between;align-items:center;
-      padding:1rem 2rem;box-shadow:0 2px 8px rgba(0,0,0,.05);z-index:1000
-    }
-    .logo{font-weight:800;font-size:1.2rem;color:var(--primary)}
-    nav ul{display:flex;list-style:none;margin:0;padding:0;gap:1.5rem}
-    nav a{font-weight:600}
-    nav a:hover{color:var(--primary)}
+  /* Navbar */
+  header{
+    position:sticky;top:0;background:#fff;
+    display:flex;justify-content:space-between;align-items:center;
+    padding:1rem 2rem;box-shadow:0 2px 8px rgba(0,0,0,.05);z-index:1000
+  }
+  .logo{font-weight:800;font-size:1.2rem;color:var(--primary)}
+  nav ul{display:flex;list-style:none;margin:0;padding:0;gap:1.5rem}
+  nav a{font-weight:600}
+  nav a:hover{color:var(--primary)}
 
-    /* HERO = Name + What I do (arriba de todo) */
-    .hero{
-      max-width:1200px;margin:0 auto;padding:3.5rem 2rem 2rem;
-      display:grid;grid-template-columns:1.1fr 1.4fr;gap:3rem;align-items:center
-    }
-    @media (max-width: 920px){ .hero{grid-template-columns:1fr;gap:2rem} }
-    .hero-title h1{font-size:3rem;line-height:1.1;margin:.25rem 0;font-weight:800;color:var(--fg)}
-    .hero-title p.role{font-size:1.25rem;margin:.25rem 0 1.25rem;font-weight:600;color:var(--fg)}
-    .cta{display:flex;gap:.75rem;flex-wrap:wrap}
-    .btn-primary,.btn-outline{
-      padding:.75rem 1.25rem;border-radius:10px;font-weight:600;display:inline-flex;align-items:center;gap:.5rem
-    }
-    .btn-primary{background:var(--primary);color:#fff}
-    .btn-primary:hover{background:var(--primary-600)}
-    .btn-outline{border:1px solid #D1D5DB;color:var(--fg);background:#fff}
-    .btn-outline:hover{border-color:#9CA3AF}
+  /* HERO (contenedor general) */
+  .hero{
+    max-width:1200px;margin:0 auto;padding:3.5rem 2rem 2rem;
+  }
 
-    .hero-whatido{
-      background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);
-      padding:1.75rem
-    }
-    .hero-whatido h2{margin:0 0 .75rem;font-size:1.125rem;letter-spacing:.02em;color:#374151;font-weight:700;text-transform:uppercase}
-    .hero-whatido p{margin:.5rem 0 0;line-height:1.7;font-size:1.05rem;color:#1F2937}
-    .hero-whatido .skills{
-      margin-top:1rem;display:flex;flex-wrap:wrap;gap:.5rem
-    }
-    .hero-photo {
-    margin: 1.5rem 0;
-    }
-    .hero-photo img {
-      width: 100%;
-      border-radius: 16px;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.08);
-      object-fit: cover;
-    }
-    .chip{
-      padding:.4rem .65rem;border-radius:999px;background:#F3F4F6;border:1px solid #E5E7EB;font-size:.9rem;color:#374151
-    }
+  /* Título y rol centrados (encima de las dos columnas) */
+  .hero-header{
+    text-align:center;
+    margin-bottom:1.25rem;
+  }
+  .hero-header h1{
+    font-size:3rem;line-height:1.1;margin:.25rem 0;font-weight:800;color:var(--fg);
+  }
+  .hero-header .role{
+    font-size:1.25rem;margin:.25rem 0 0;font-weight:600;color:var(--fg);
+  }
 
-    /* Sections */
-    .section{padding:4rem 2rem;max-width:1200px;margin:0 auto}
-    .section h2{text-align:center;font-size:2rem;font-weight:800;margin-bottom:2rem}
+  /* Grid: izquierda imagen | derecha What I do (alturas iguales) */
+  .hero-grid{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+    align-items: stretch;  /* fuerza misma altura */
+  }
+  @media (max-width: 920px){
+    .hero-grid{ grid-template-columns:1fr; }
+  }
 
-    /* Projects */
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(300px,1fr));gap:2rem}
-    .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);overflow:hidden;display:flex;flex-direction:column}
-    .card img{width:100%;height:200px;object-fit:cover}
-    .card-content{padding:1.25rem;display:flex;flex-direction:column;gap:.5rem;flex-grow:1}
-    .card-content h3{margin:.25rem 0 .25rem;font-weight:700}
-    .card-content p{margin:0 0 .5rem;flex-grow:1;color:#374151}
-    .card .btn-primary{align-self:flex-start}
+  /* Imagen con misma altura que el panel de What I do */
+  .hero-photo,
+  .hero-whatido{ height:100%; }
+  .hero-photo img{
+    width:100%;
+    height:100%;
+    object-fit:cover;
+    border-radius:var(--radius);
+    box-shadow:var(--shadow);
+    display:block;
+  }
 
-    /* Contact */
-    .contact{max-width:800px}
-    form{display:grid;gap:1rem;margin-top:1.25rem}
-    input,textarea{padding:.8rem;border-radius:10px;border:1px solid #D1D5DB;font-family:inherit;font-size:1rem;background:#fff}
-    button{background:var(--primary);color:#fff;padding:.9rem 1.25rem;border:none;border-radius:10px;font-weight:600;cursor:pointer}
-    button:hover{background:var(--primary-600)}
-    .social{margin-top:1rem;display:flex;justify-content:center;gap:1.25rem}
-    .social a{color:var(--primary);font-weight:600}
+  /* WHAT I DO panel */
+  .hero-whatido{
+    background:var(--card);
+    border-radius:var(--radius);
+    box-shadow:var(--shadow);
+    padding:1.75rem;
+  }
+  .hero-whatido h2{
+    margin:0 0 .75rem;
+    font-size:1.125rem;letter-spacing:.02em;color:#374151;font-weight:700;text-transform:uppercase
+  }
+  .hero-whatido p{
+    line-height:1.8;         /* + aire */
+    margin:0 0 1rem;         /* separa párrafos */
+    font-size:1.05rem;color:#1F2937
+  }
+  .hero-whatido p + p{ margin-top:.5rem; }
+  .hero-whatido .skills{
+    margin-top:1rem;display:flex;flex-wrap:wrap;gap:.5rem
+  }
+  .chip{
+    padding:.4rem .65rem;border-radius:999px;background:#F3F4F6;border:1px solid #E5E7EB;font-size:.9rem;color:#374151
+  }
 
-    /* Footer */
-    footer{text-align:center;padding:2rem;background:#fff;margin-top:2rem}
-  </style>
+  /* CTAs */
+  .cta{display:flex;gap:.75rem;flex-wrap:wrap}
+  .cta-centered{justify-content:center;margin-top:1rem;display:flex;gap:.75rem}
+  .btn-primary,.btn-outline{
+    padding:.75rem 1.25rem;border-radius:10px;font-weight:600;display:inline-flex;align-items:center;gap:.5rem
+  }
+  .btn-primary{background:var(--primary);color:#fff}
+  .btn-primary:hover{background:var(--primary-600)}
+  .btn-outline{border:1px solid #D1D5DB;color:var(--fg);background:#fff}
+  .btn-outline:hover{border-color:#9CA3AF}
+
+  /* Sections */
+  .section{padding:4rem 2rem;max-width:1200px;margin:0 auto}
+  .section h2{text-align:center;font-size:2rem;font-weight:800;margin-bottom:2rem}
+
+  /* Projects */
+  .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(300px,1fr));gap:2rem}
+  .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);overflow:hidden;display:flex;flex-direction:column}
+  .card img{width:100%;height:200px;object-fit:cover}
+  .card-content{padding:1.25rem;display:flex;flex-direction:column;gap:.5rem;flex-grow:1}
+  .card-content h3{margin:.25rem 0 .25rem;font-weight:700}
+  .card-content p{margin:0 0 .5rem;flex-grow:1;color:#374151}
+  .card .btn-primary{align-self:flex-start}
+
+  /* Contact */
+  .contact{max-width:800px}
+  form{display:grid;gap:1rem;margin-top:1.25rem}
+  input,textarea{padding:.8rem;border-radius:10px;border:1px solid #D1D5DB;font-family:inherit;font-size:1rem;background:#fff}
+  button{background:var(--primary);color:#fff;padding:.9rem 1.25rem;border:none;border-radius:10px;font-weight:600;cursor:pointer}
+  button:hover{background:var(--primary-600)}
+  .social{margin-top:1rem;display:flex;justify-content:center;gap:1.25rem}
+  .social a{color:var(--primary);font-weight:600}
+
+  /* Footer */
+  footer{text-align:center;padding:2rem;background:#fff;margin-top:2rem}
+</style>
 </head>
 <body>
   <!-- Navbar -->
@@ -109,34 +145,33 @@
     </nav>
   </header>
 
-  <!-- HERO: Name + What I do (como la imagen de referencia) -->
-  <section class="hero">
-    <!-- Columna izquierda: nombre + rol + CTA -->
-    <div class="hero-title">
-      <h1>Lautaro Pereira Basile</h1>
-      <p class="role">Economist & Data Analyst</p>
-      <div class="hero-photo">
-        <img src="images/Selfie.jpg" alt="LPB portrait">
-      </div>
-      <div class="cta">
-        <a class="btn-primary" href="#projects">View my work</a>
-        <a class="btn-outline" href="#contact">Get in touch</a>
-      </div>
-    </div>
+  <!-- HERO: Name (centrado) + Grid (Imagen | What I do) -->
+<section class="hero">
+  <!-- Encabezado centrado sobre ambas columnas -->
+  <div class="hero-header">
+    <h1>Lautaro Pereira Basile</h1>
+    <p class="role">Economist &amp; Data Analyst</p>
+  </div>
 
-    <!-- Columna derecha: WHAT I DO (texto más largo) -->
+  <!-- Grid de 2 columnas: izquierda imagen, derecha What I do -->
+  <div class="hero-grid">
+    <div class="hero-photo">
+      <img src="images/profile.jpg" alt="Lautaro Pereira Basile portrait">
+    </div>
     <aside class="hero-whatido" aria-label="What I do">
-      <h2>What I do</h2>
+      <h2>WHAT I DO</h2>
       <p>
-        I turn complex data into clear, actionable solutions. With experience in consulting and fintech, I specialize in
-        extracting, modeling and visualizing information to uncover insights that improve decision-making and operational efficiency.
-        My focus is on building robust pipelines, automating reports and designing intuitive dashboards that reveal trends,
-        risks and opportunities—so stakeholders can move faster with confidence. :contentReference[oaicite:0]{index=0}
+        I turn complex data into clear, actionable solutions. With experience in consulting and fintech,
+        I specialize in extracting, modeling and visualizing information to uncover insights that improve
+        decision-making and operational efficiency. My focus is on building robust pipelines, automating
+        reports and designing intuitive dashboards that reveal trends, risks and opportunities—so stakeholders
+        can move faster with confidence.
       </p>
       <p>
-        Day to day, that means writing efficient queries, optimizing datasets, and communicating findings with crisp visuals
-        tailored to business questions. I’m comfortable owning the full path from raw data to decision: from BigQuery and Python
-        transformations to KPI design and delivery in tools like Power BI, Tableau or Looker Studio.
+        Day to day, that means writing efficient queries, optimizing datasets, and communicating findings
+        with crisp visuals tailored to business questions. I’m comfortable owning the full path from raw data
+        to decision: from BigQuery and Python transformations to KPI design and delivery in tools like Power BI,
+        Tableau or Looker Studio.
       </p>
       <div class="skills" aria-label="Core skills">
         <span class="chip">Python</span>
@@ -145,10 +180,17 @@
         <span class="chip">Tableau</span>
         <span class="chip">Looker Studio</span>
         <span class="chip">Excel</span>
-        <span class="chip">Git & GitHub</span>
+        <span class="chip">Git &amp; GitHub</span>
       </div>
     </aside>
-  </section>
+  </div>
+
+  <!-- CTAs centrados abajo del bloque -->
+  <div class="cta cta-centered">
+    <a class="btn-primary" href="#projects">View my work</a>
+    <a class="btn-outline" href="#contact">Get in touch</a>
+  </div>
+</section>
 
   <!-- Projects -->
   <section id="projects" class="section">
