--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     border-radius:var(--radius);
     box-shadow:var(--shadow);
     padding:1.75rem;
+    text-align: center;
   }
   .hero-whatido h2{
     margin:0 0 .75rem;
@@ -84,7 +85,9 @@
   .hero-whatido p{
     line-height:1.8;         /* + aire */
     margin:0 0 1rem;         /* separa párrafos */
-    font-size:1.05rem;color:#1F2937
+    font-size:1.05rem;
+    color:#1F2937;
+    text-align: center;
   }
   .hero-whatido p + p{ margin-top:.5rem; }
   .hero-whatido .skills{
@@ -156,7 +159,7 @@
   <!-- Grid de 2 columnas: izquierda imagen, derecha What I do -->
   <div class="hero-grid">
     <div class="hero-photo">
-      <img src="images/profile.jpg" alt="Lautaro Pereira Basile portrait">
+      <img src="images/Selfie.jpg" alt="Lautaro Pereira Basile portrait">
     </div>
     <aside class="hero-whatido" aria-label="What I do">
       <h2>WHAT I DO</h2>
