--- a/index.html
+++ b/index.html
@@ -76,11 +76,13 @@
     border-radius:var(--radius);
     box-shadow:var(--shadow);
     padding:1.75rem;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
   }
   .hero-whatido h2{
     margin:0 0 .75rem;
-    font-size:1.125rem;letter-spacing:.02em;color:#374151;font-weight:700;text-transform:uppercase
+    font-size:1.125rem;letter-spacing:.02em;color:#374151;font-weight:700;text-transform:uppercase;
+    text-align: center;
   }
   .hero-whatido p{
     line-height:1.8;         /* + aire */
@@ -90,7 +92,12 @@
   }
   .hero-whatido p + p{ margin-top:.5rem; }
   .hero-whatido .skills{
-    margin-top:1rem;display:flex;flex-wrap:wrap;gap:.5rem
+    margin-top:1rem;display:flex;flex-wrap:wrap;gap:.5rem;
+    margin-top: auto;
+    margin-bottom: auto;
+    display: flex;
+    flex-wrap: wrap;
+    gap: .5rem;
   }
   .chip{
     padding:.4rem .65rem;border-radius:999px;background:#F3F4F6;border:1px solid #E5E7EB;font-size:.9rem;color:#374151
