--- a/Proyect_1.html
+++ b/Proyect_1.html
@@ -124,7 +124,7 @@
   <!-- Project -->
   <section class="project">
     <h1>Project #1: DIA Supermarket Web Scraping</h1>
-    <img src="images/image_scraper.jpg" alt="DIA Supermarket Web Scraping Project">
+    <img src="images/web_scrapping.jpeg" alt="DIA Supermarket Web Scraping Project">
 
     <h2>Description</h2>
     <p>
