--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <h2>Projects</h2>
     <div class="grid">
       <article class="card">
-        <img src="images/image_scraper.jpg" alt="Web Scraper project cover">
+        <img src="images/DIA.webp" alt="Web Scraper project cover">
         <div class="card-content">
           <h3>Web Scraper</h3>
           <p>Tool to collect and analyze supermarket product data (prices, discounts, trends).</p>
