--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       </article>
 
       <article class="card">
-        <img src="images/pic02.svg" alt="Data Visualization project cover">
+        <img src="images/DV Dia.webp" alt="Data Visualization project cover">
         <div class="card-content">
           <h3>Data Visualization</h3>
           <p>Interactive and static charts to explore a retail dataset and surface insights.</p>
@@ -223,7 +223,7 @@
       </article>
 
       <article class="card">
-        <img src="images/pic03.svg" alt="Fintech dashboard project cover">
+        <img src="images/Uala.webp" alt="Fintech dashboard project cover">
         <div class="card-content">
           <h3>Dashboards</h3>
           <p>Fintech Credit Area KPI dashboard for monitoring conversion, cohorts and risk.</p>
