--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lautaro Pereira Basile - Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="images/tab_icon.png">
+  <link rel="icon" type="image/png" href="images/L.png">
   <style>
   :root{
     --bg:#F9FAFB;
