--- a/Proyect_1.html
+++ b/Proyect_1.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Project #1 – DIA Supermarket Web Scraping · LPB Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="images/L.png">
+  <link rel="icon" type="image/png" href="images/lpb_icon.png">
   <style>
     body {
       margin: 0;
