--- a/Proyect_2.html
+++ b/Proyect_2.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Data Visualization – LPB Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="images/L.png">
+  <link rel="icon" type="image/png" href="images/lpb_icon.png">
   <style>
     body{margin:0;font-family:'Inter',sans-serif;background:#F9FAFB;color:#111827}
     header{position:sticky;top:0;background:#fff;display:flex;justify-content:space-between;align-items:center;padding:1rem 2rem;box-shadow:0 2px 8px rgba(0,0,0,.05);z-index:1000}
