--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
 <body>
   <!-- Navbar -->
   <header>
-    <link rel="icon" type="image/png" href="images/L (500 x 300 px).png">
+    <a href="#" class="logo">
+      <img src="images/lpb_icon.png" alt="Logo LPB">
+    </a>
     <nav>
       <ul>
         <li><a href="#projects">Projects</a></li>
