--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
     max-width:1200px;margin:0 auto;padding:3.5rem 2rem 2rem;
   }
 
+  .logo img{
+  height: 32px;   /* ajustá según el tamaño que quieras */
+  width: auto;
+  display: block;
+  } 
+
   /* Título y rol centrados (encima de las dos columnas) */
   .hero-header{
     text-align:center;
