--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   <!-- Navbar -->
   <header>
     <a href="#" class="logo">
-      <img src="images/lpb_icon.png" alt="Logo LPB">
+      <img src="images/L (500 x 300 px).png" alt="Logo LPB">
     </a>
     <nav>
       <ul>
