--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     display:flex;justify-content:space-between;align-items:center;
     padding:1rem 2rem;box-shadow:0 2px 8px rgba(0,0,0,.05);z-index:1000
   }
-  .logo{font-weight:800;font-size:1.2rem;color:var(--primary)}
+  /* .logo{font-weight:800;font-size:1.2rem;color:var(--primary)} */
   nav ul{display:flex;list-style:none;margin:0;padding:0;gap:1.5rem}
   nav a{font-weight:600}
   nav a:hover{color:var(--primary)}
@@ -37,7 +37,7 @@
   }
 
   .logo img{
-  height: 32px;   /* ajustá según el tamaño que quieras */
+  height: 300px;   /* ajustá según el tamaño que quieras */
   width: auto;
   display: block;
   } 
