--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   }
 
   .logo img{
-  height: 300px;   /* ajustá según el tamaño que quieras */
+  height: 150px;   /* ajustá según el tamaño que quieras */
   width: auto;
   display: block;
   } 
@@ -166,8 +166,8 @@
 <section class="hero">
   <!-- Encabezado centrado sobre ambas columnas -->
   <div class="hero-header">
-    <h1>Lautaro Pereira Basile</h1>
-    <p class="role">Economist &amp; Data Analyst</p>
+    <h1>Economist &amp; Data Analyst</h1>
+    <!-- <p class="role">Economist &amp; Data Analyst</p> -->
   </div>
 
   <!-- Grid de 2 columnas: izquierda imagen, derecha What I do -->
