--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <!-- HERO -->
   <section class="hero">
     <div class="hero-header">
-      <h1>Economist &amp; Data Analyst</h1>
+      <h1>Data Analyst &amp; Economist</h1>
     </div>
     <div class="hero-grid">
       <div class="hero-photo">
